# lua-compiler

./: Cargo.toml  README.md  flake.nix
macros/: Cargo.toml
macros-core/: Cargo.toml
macros-core/src/: lib.rs
macros-core/src/ebnf/: mod.rs
macros-core/src/wip1/: mod.rs
macros-core/src/wip2/: mod.rs
macros-core/tests/: tests.rs
macros-core/tests/expand/: first.expanded.rs  first.rs  second.expanded.rs  second.rs
macros/src/: lib.rs
macros/tests/expand/: first.expanded.rs  first.rs
src/parser/: mod.rs  tokenizer.rs  tokenizer_v2.rs
src/parser/tokenizer/: expressions.rs  literal.rs  mod.rs  statements.rs  variable.rs
