workspace = { members = ["macros", "macros-core"] }
[package]
name = "lua-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros-core = { path = "macros-core" }
nom = "7.1.3"
strum = { version = "0.26.2", features = ["derive"] }
